# amis-python

./: pyproject.toml  requirements.txt  setup.py
amis/: components.py
amis/templates/: app.jinja2  page.jinja2
