[tool.poetry]
name = "amis-python"
version = "1.0.8post2"
description = "基于百度amis前端框架的python pydantic模型封装。"
authors = ["惜月 <277073121@qq.com>"]
readme = "README.md"
license = "Apache-2.0"
keywords = ["amis"]
homepage = "https://github.com/CMHopeSunshine/amis-py"
repository = "https://github.com/CMHopeSunshine/amis-py"
documentation = "https://github.com/CMHopeSunshine/amis-py#readme"
packages = [
    { include = "amis"}
]


[[tool.poetry.source]]
name = "ali"
url = "https://mirrors.aliyun.com/pypi/simple/"

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.9.2"
jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
